--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -23,7 +23,8 @@
 				|AK
 		.row__vacancies.row__cell
 			i.label.green__label
-				|Практика
+				span
+					|Практика
 			p
 				|Поля
 		.row__notes.row__cell
@@ -34,12 +35,16 @@
 			.table-full__row
 				p.table-full__title
 					|Отобраны
+				.table-full__placeholder.first
+				.table-full__placeholder.second
+				.table-full__placeholder.third
 			.table-full__row.f-container
 					.table-full__cell.row__cell.cell-names
 						p
 							|Гурківський Олександр
 						span.row__indicator.indicator.department
-							|2
+							span
+								|2
 					.table-full__cell.row__cell.cell-status
 						.cell-status__left
 							.cell-status__slider(data-date="")
@@ -79,7 +84,8 @@
 								|AC
 					.table-full__cell.row__cell.cell-exp
 						i.label.hot__label
-							|Сезонная
+							span
+								|Сезонная
 						p
 							|Цветы
 					.table-full__cell.row__cell.cell-notes
@@ -120,7 +126,8 @@
 							|AC
 				.table-full__cell.row__cell.cell-exp
 					i.label.green__label
-						|Практика
+						span
+							|Практика
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
@@ -204,7 +211,8 @@
 							|AC
 				.table-full__cell.row__cell.cell-exp
 					i.label.blue__label
-						|Рабочая
+						span
+							|Рабочая
 					p
 						|Коровы
 				.table-full__cell.row__cell.cell-notes
@@ -246,17 +254,22 @@
 				.table-full__cell.row__cell.cell-exp
 				
 					i.label.green__label
-						|Д2
+						span
+							|Д 2
 					+stars('EN', 3)
 					p
 						|Агроном
 					i.label.dirty-green__label
-						|ВСТ
+						span
+							|ВСТ
 				.table-full__cell.row__cell.cell-notes
 		.table-full__ready.ready
 			.table-full__row
 				p.table-full__title
 					|Готовятся к подаче
+				.table-full__placeholder.first
+				.table-full__placeholder.second
+				.table-full__placeholder.third
 			.table-full__row.f-container
 					.table-full__cell.row__cell.cell-names
 						p
@@ -329,7 +342,8 @@
 						.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 					i.label.green__label
-						|Практика
+						span
+							|Практика
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
@@ -337,6 +351,9 @@
 			.table-full__row
 				p.table-full__title
 					|Ждут разрешения
+				.table-full__placeholder.first
+				.table-full__placeholder.second
+				.table-full__placeholder.third
 			.table-full__row.f-container
 				.table-full__cell.row__cell.cell-names
 					p
@@ -446,6 +463,9 @@
 			.table-full__row
 				p.table-full__title
 					|Готовятся к отъезду
+				.table-full__placeholder.first
+				.table-full__placeholder.second
+				.table-full__placeholder.third
 			.table-full__row.f-container
 				.table-full__cell.row__cell.cell-names
 					p
@@ -485,6 +505,9 @@
 			.table-full__row
 				p.table-full__title
 					|Трудоустроены
+				.table-full__placeholder.first
+				.table-full__placeholder.second
+				.table-full__placeholder.third
 			.table-full__row.f-container
 				.table-full__cell.row__cell.cell-names
 					p
@@ -531,17 +554,23 @@
 					|18 - 5
 		.row__indicators.row__cell
 			span.row__indicator.indicator.decline
-				|4
+				span
+					|4
 			span.row__indicator.indicator.choosen
-				|8
+				span
+					|8
 			span.row__indicator.indicator.ready
-				|5
+				span
+					|5
 			span.row__indicator.indicator.wait
-				|12
+				span
+					|12
 			span.row__indicator.indicator.department
-				|3
+				span
+					|3
 			span.row__indicator.indicator.busy
-				|2
+				span
+					|2
 		.row__name-2.row__cell.no-open
 			p.row__fullname.no-open
 				|Gustav Schlüter Gmbh
@@ -549,7 +578,8 @@
 				|CK
 		.row__vacancies.row__cell
 			i.label.hot__label
-				|Сезонная
+				span
+					|Сезонная
 			p
 				|Цветы
 		.row__notes.row__cell
