--- a/app/pug/layouts/vacancy/sidebar.pug
+++ b/app/pug/layouts/vacancy/sidebar.pug
@@ -43,7 +43,7 @@
 		.sidebar__filters
 			.sidebar__input-wrapper
 				
-				input.sidebar__search-input(type="text")
+				input.sidebar__search-input(type="text" placeholder="поиск")
 				i.search-icon
 					svg
 						use(xlink:href='img/sprites/svg/symbol/sprite.svg#search')
