--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -17,6 +17,9 @@
 					.table-full__row
 						p.table-full__title
 							|Отобраны
+						.table-full__placeholder
+						.table-full__placeholder
+						.table-full__placeholder
 					.table-full__row.f-container
 							.table-full__cell.row__cell.cell-names
 								p
@@ -44,7 +47,7 @@
 											|Билеты куплены
 										p.status.busy
 											|Трудоустроен
-									.cell-status__controls
+									.cell-status__controls.choosen
 										.cell-status__control-left
 											i.ico.rotate-left
 												+svg2('little-arrow')
@@ -87,7 +90,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.choosen
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -124,7 +127,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.choosen
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -165,7 +168,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.choosen
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -204,7 +207,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.choosen
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -253,7 +256,7 @@
 											|Билеты куплены
 										p.status.busy
 											|Трудоустроен
-									.cell-status__controls
+									.cell-status__controls.ready
 										.cell-status__control-left
 											i.ico.rotate-left
 												+svg2('little-arrow')
@@ -291,7 +294,7 @@
 											|Билеты куплены
 										p.status.busy
 											|Трудоустроен
-									.cell-status__controls
+									.cell-status__controls.ready
 										.cell-status__control-left
 											i.ico.rotate-left
 												+svg2('little-arrow')
@@ -334,7 +337,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.wait
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -369,7 +372,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.wait
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -404,7 +407,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.wait
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -443,7 +446,7 @@
 										|Билеты куплены
 									p.status.busy
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.department
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
@@ -482,7 +485,7 @@
 										|Билеты куплены
 									p.status.busy.active
 										|Трудоустроен
-								.cell-status__controls
+								.cell-status__controls.busy
 									.cell-status__control-left
 										i.ico.rotate-left
 											+svg2('little-arrow')
