--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -3,15 +3,19 @@
 		.main-info__choose-block
 			.choose-employer
 				p
-					|Выберете работодателя
+					span
+						|Выберете работодателя
 			.choose-product-type
 				p.country-vacancy
-					|NO 293
+					span
+						|NO 293
 				p.type-product
-					|Выберете тип продукции
+					span
+						|Выберете тип продукции
 			.full-info
 				p.country-vacancy
-					|NO 293
+					span
+						|NO 293
 				p.products
 					span.visa-type
 						|Сезонная - 
@@ -67,13 +71,16 @@
 		.main-info__choose-block
 			.choose-employer
 				p
-					|Выберете работодателя
+					span
+						|Выберете работодателя
 			.employer-name
 				p
-					|Thompson Equestrian Partners
+					span
+						|Thompson Equestrian Partners
 			.full-info
 				p.country-vacancy
-					|NO 293
+					span
+						|NO 293
 				p.products
 					span.visa-type
 						|Сезонная - 
