--- a/app/pug/layouts/work-popup/_contacts-history.pug
+++ b/app/pug/layouts/work-popup/_contacts-history.pug
@@ -1,6 +1,7 @@
 .row.contacts-history.modal-row
 	button.show-more
-		|показать еще 5 контактов
+		span
+			|показать еще 5 контактов
 	.modal-row__controls
 		p
 			|История контактов
