--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -1,6 +1,7 @@
 .row.vacancies-history.modal-row
 	button.show-more
-		|показать еще 5 вакансий
+		span
+			|показать еще 5 вакансий
 	.modal-row__controls
 		p
 			|История вакансий
