--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -79,6 +79,11 @@
 	z-index: 2;
 	width: 100%;
 	p {
+		span {
+			margin-top: 0.15em;
+			display: inline-block;
+		}
+		
 		margin-bottom: 0;
 	}
 
@@ -96,7 +101,7 @@
 			cursor: pointer;
 			color: @white;
 			font-size: 1rem;
-			font-weight: 500;
+			font-weight: 400;
 		}
 	}
 	.choose-product-type, .full-info, .employer-name {
@@ -109,7 +114,7 @@
 		p {
 			color: @white;
 			font-size: 1rem;
-			font-weight: 500;
+			font-weight: 400;
 		}
 	
 		.country-vacancy {
@@ -132,7 +137,7 @@
 		// display: flex;
 		justify-content: center;
 		p {
-			font-weight: 500;
+			font-weight: 400;
 			background: @main-color;
 			padding: 3px 8px;
 			border-radius: 20px;
@@ -146,7 +151,7 @@
 		p {
 			color: @white;
 			font-size: 1rem;
-			font-weight: 500;
+			font-weight: 400;
 		}
 		.country-vacancy {
 			background: @orange;
