--- a/app/less/vacancy/_sidebar.less
+++ b/app/less/vacancy/_sidebar.less
@@ -2,6 +2,7 @@
 	.sidebar__filters {
 		height: 214/1000 * 100vh;
 		min-height: 214px;
+		padding-top: 14px;
 	}
 
 	.sidebar__stats {
@@ -35,6 +36,8 @@
 	border-bottom: 1px solid @secondary;
 
 	input + label {
+		padding: 3px 0;
+		// margin-top: 0.1em;
 		&:before {
 			content: none;
 		}
